--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webpack-react-todo",
   "version": "1.0.0",
   "description": "First application in webpack",
+  "main": "/dist/main.js",  
   "repository": "https://github.com/Scherlock90/webpack-react-todo.git",
   "author": "Sebastian Napora <sebastian.napora@intive.com>",
   "license": "MIT",
@@ -31,7 +32,6 @@
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack-cli": "^3.3.8"
   }
