adding my first app bundle lib in react webpack

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "webpack-react-todo",
   "version": "1.0.0",
   "description": "First application in webpack",
-  "main": "/dist/main.js",  
+  "main": "/dist/main.js",
   "repository": "https://github.com/Scherlock90/webpack-react-todo.git",
   "author": "Sebastian Napora <sebastian.napora@intive.com>",
   "license": "MIT",
+  "private": true,
+  "homepage": "https://Scherlock90.github.io/webpack-react-todo/",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,13 +19,23 @@
     "registry": "https://registry.yarnpkg.com"
   },
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start:dev": "webpack-dev-server --watch-content-base",
-    "build": "webpack --config webpack.config.js --module-bind js=babel-loader"
+    "build:webpack": "webpack --config webpack.config.js --module-bind js=babel-loader"
   },
   "dependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "gh-pages": "^2.1.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.1.1",
     "webpack": "^4.39.3",
     "webpack-dev-server": "^3.8.0"
   },
@@ -34,5 +46,17 @@
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack-cli": "^3.3.8"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
