--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-react-todo",
   "version": "1.0.0",
   "description": "First application in webpack",
-  "main": "/dist/index.js",
+  "main": "/src/index.js",
   "repository": "https://github.com/Scherlock90/webpack-react-todo.git",
   "author": "Sebastian Napora <sebastian.napora@intive.com>",
   "license": "MIT",
@@ -22,10 +22,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start:dev": "webpack-dev-server --watch-content-base",
-    "build:webpack": "webpack --config webpack.config.js --module-bind js=babel-loader"
+    "build:webpack": "webpack --config webpack.config.js --module-bind js=babel-loader",
+    "build-production:webpack": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@babel/core": "^7.6.0",
@@ -43,9 +44,13 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "webpack-merge": "^4.2.2"
   },
   "browserslist": {
     "production": [
