--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "webpack --mode production",
     "test": "react-scripts test",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d webpack-react-todo/build",
+    "deploy": "gh-pages -d /build",
     "start:dev": "webpack-dev-server --watch-content-base",
     "build:webpack": "webpack --config webpack.config.js --module-bind js=babel-loader",
     "build-production:webpack": "webpack --config webpack.prod.js"
