--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "registry": "https://registry.yarnpkg.com"
   },
   "scripts": {
+    "first-start:dev": "yarn build || npm run build",
     "start:dev": "webpack-dev-server --watch-content-base",
-    "build": "webpack --config webpack.prod.js --module-bind js=babel-loader",
+    "build:ss": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "build:dev": "webpack --config webpack.config.js --module-bind js=babel-loader",
-    "build-production:webpack": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "deploy": "gh-pages -d /build"
   },
   "dependencies": {
