--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "scripts": {
     "first-start:dev": "yarn build || npm run build",
     "start:dev": "webpack-dev-server --watch-content-base",
-    "build:ss": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "build:dev": "webpack --config webpack.config.js --module-bind js=babel-loader",
     "build": "webpack --config webpack.prod.js",
+    "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "deploy": "gh-pages -d /build"
   },
   "dependencies": {
