--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack-dev-server": "^3.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
