--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "registry": "https://registry.yarnpkg.com"
   },
   "scripts": {
-    "first-start:dev": "yarn build || npm run build",
+    "first-build:dev": "webpack --config webpack.config.js --module-bind js=babel-loader",
     "start:dev": "webpack-dev-server --watch-content-base",
-    "build:dev": "webpack --config webpack.config.js --module-bind js=babel-loader",
     "build": "webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "deploy": "gh-pages -d /build"
@@ -30,6 +29,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
     "webpack": "^4.39.3",
@@ -38,6 +38,8 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
@@ -45,7 +47,10 @@
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.1.0",
+    "typescript": "^3.6.3",
     "webpack-cli": "^3.3.8",
     "webpack-merge": "^4.2.2"
   },
