change in tsconfig noImplicitAny to false

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "webpack-react-todo",
   "version": "1.0.0",
   "description": "First application in webpack",
-  "main": "/lib/index.js",
   "repository": "https://github.com/Scherlock90/webpack-react-todo.git",
   "author": "Sebastian Napora",
   "license": "MIT",
@@ -40,6 +39,8 @@
     "@babel/preset-env": "^7.6.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
