--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "history": "^4.9.0",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
