--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "registry": "https://registry.yarnpkg.com"
   },
   "scripts": {
-    "first-build:dev": "webpack --config webpack.config.js --module-bind js=babel-loader",
+    "build:dev": "webpack --config webpack.config.js --module-bind js=babel-loader",
     "start:dev": "webpack-dev-server --watch-content-base",
     "build": "webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "http-server": "^0.11.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
@@ -49,10 +50,12 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "history": "^4.9.0",
     "html-webpack-plugin": "^3.2.0",
+    "manage-htaccess": "^1.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.1.0",
     "typescript": "^3.6.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-cli": "^3.3.8",
     "webpack-merge": "^4.2.2"
   },
