--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "gh-pages": "^2.1.1",
-    "http-server": "^0.11.1",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
@@ -51,6 +51,8 @@
     "history": "^4.9.0",
     "html-webpack-plugin": "^3.2.0",
     "manage-htaccess": "^1.0.0",
+    "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.1.0",
