adding server-side rendering with node

--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "clean": "rimraf build",
     "build:dev": "yarn run clean && webpack --config webpack.config.js --module-bind js=babel-loader",
     "start:dev": "webpack-dev-server --watch-content-base",
+    "start:node": "babel-node server/index.js",
     "build": "webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "deploy": "gh-pages -d /build"
   },
   "dependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/node": "^7.6.2",
+    "@reach/router": "^1.2.1",
+    "express": "^4.17.1",
     "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -43,7 +48,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
