--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean": "rimraf build",
     "build:dev": "yarn run clean && webpack --config webpack.config.js --module-bind js=babel-loader",
     "start:dev": "webpack-dev-server --watch-content-base",
-    "build": "webpack --config webpack.prod.js",
+    "build": "yarn run clean && webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "deploy": "gh-pages -d /build"
   },
