--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start:dev": "webpack-dev-server --watch-content-base",
     "build": "yarn run clean && webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
-    "deploy": "gh-pages -d /build"
+    "deploy": "gh-pages -d /build",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "gh-pages": "^2.1.1",
