update whole project typescript,webpack, eslint,prettier packages

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "scripts": {
     "clean": "rimraf build",
+    "lint": "eslint --fix --ext .ts,.tsx .",
+    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
     "build:dev": "yarn run clean && webpack --config webpack.config.js --module-bind js=babel-loader",
     "start:dev": "webpack-dev-server --watch-content-base",
     "build": "yarn run clean && webpack --config webpack.prod.js",
@@ -29,40 +31,82 @@
   "dependencies": {
     "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.1.1",
-    "webpack": "^4.39.3",
-    "webpack-dev-server": "^3.8.0"
+    "react-router-dom": "^5.1.2",
+    "regenerator-runtime": "^0.13.3",
+    "dompurify": "^2.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@types/core-js": "^2.5.2",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.5",
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/compression-webpack-plugin": "^2.0.1",
+    "@types/copy-webpack-plugin": "^5.0.0",
+    "@types/dompurify": "^2.0.1",
+    "@types/history": "^4.7.5",
+    "@types/html-webpack-plugin": "^3.2.2",
+    "@types/node": "^13.7.0",
+    "@types/react": "^16.9.20",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.2",
+    "@types/webpack": "^4.41.6",
+    "@types/webpack-bundle-analyzer": "^2.13.3",
+    "@types/webpack-dev-server": "^3.10.0",
+    "@types/webpack-merge": "^4.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "history": "^4.9.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.0",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "manage-htaccess": "^1.0.0",
-    "sass-loader": "^8.0.0",
-    "sass-resources-loader": "^2.0.1",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^6.1.0",
-    "typescript": "^3.6.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack-cli": "^3.3.8",
+    "prettier": "^1.19.1",
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.0.1",
+    "styled-normalize": "^8.0.7",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "plugin:prettier/recommended"
+    ]
+  },
+  "prettier": {
+    "*.+(json|css|md|ts|tsx)": "prettier --write --fix --ext .ts,.tsx ."
+  },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "eslint --fix --ext .ts,.tsx .",
+      "git add"
+    ],
+    "*.+(json|css|md|ts|tsx)": [
+      "prettier --write --fix --ext .ts,.tsx .",
+      "git add"
+    ]
   },
   "browserslist": {
     "production": [
