--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,23 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": [
-        "react-loadable/babel"
-      ]
+  "presets": [
+    "@babel/typescript",
+    "@babel/react",
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "fileName": false
+      }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css"
+      }
+    ]
+  ]
 }
