--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "semi": true,
+  "semi": false,
   "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 70,
+  "jsxSingleQuote": true,
+  "printWidth": 120,
+  "tabWidth": 2
 }
