--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,25 @@
 {
-    "compilerOptions": {
-        "outDir": "./build/",
-        "sourceMap": true,
-        "noImplicitAny": false,
-        "module": "commonjs",
-        "target": "es6",
-        "jsx": "react"
+  "compilerOptions": {
+    "sourceMap": false,
+    "noEmit": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "module": "commonjs",
+    "target": "es2017",
+    "jsx": "react",
+    "moduleResolution": "node",
+    "lib": ["dom"],
+    "baseUrl": "src",
+    "types": ["node"],
+    "paths": {
+      "@Components/*": ["components/*"],
+      "@Core/*": ["core/*"],
+      "@Services/*": ["services/*"],
+      "@Utils/*": ["utils/*"],
+      "@Static/*": ["static/*"],
+      "@Assets/*": ["assets/*"],
+      "@Common/*": ["/components/common/*"]
     }
+  }
 }
