--- a/package.json
+++ b/package.json
@@ -26,28 +26,34 @@
     "build": "yarn run clean && webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
     "deploy": "gh-pages -d /build",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest --config test/unit/jest.conf.js --coverage"
   },
   "dependencies": {
+    "dompurify": "^2.0.8",
     "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2",
-    "regenerator-runtime": "^0.13.3",
-    "dompurify": "^2.0.8"
+    "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/compression-webpack-plugin": "^2.0.1",
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/dompurify": "^2.0.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.5",
     "@types/html-webpack-plugin": "^3.2.2",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
@@ -59,6 +65,9 @@
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
+    "babel-core": "^7.0.0-bridge",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^25.4.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -67,20 +76,29 @@
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.18.3",
     "file-loader": "^5.0.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.4.0",
+    "jest-serializer": "^25.2.6",
+    "jest-transform-stub": "^2.0.0",
     "prettier": "^1.19.1",
+    "react-test-render": "^1.1.2",
     "style-loader": "^1.1.3",
     "styled-components": "^5.0.1",
     "styled-normalize": "^8.0.7",
+    "ts-jest": "^25.4.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
