--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 before_script:
   - npm ci
 script:
-  - CI=false npm run build:production
+  - CI=false npm run build
 
 deploy:
   provider: pages
