--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "start:dev": "webpack-dev-server --watch-content-base",
     "build": "yarn run clean && webpack --config webpack.prod.js",
     "build:production": "webpack --config webpack.prod.js --module-bind js=babel-loader",
-    "deploy": "gh-pages -d /build",
+    "deploy": "gh-pages -d build",
     "typecheck": "tsc --noEmit",
     "test": "jest --config test/unit/jest.conf.js --coverage"
   },
   "dependencies": {
     "dompurify": "^2.0.8",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
