--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@testing-library/react": "^10.0.3",
     "@types/compression-webpack-plugin": "^2.0.1",
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/dompurify": "^2.0.1",
