--- a/.eslintrc
+++ b/.eslintrc
@@ -47,7 +47,12 @@
     "prefer-template": 2,
     "react/prop-types": 0,
     "react/jsx-curly-brace-presence": ["error", { "props": "always", "children": "never" }],
-    "react/display-name": 0
+    "react/display-name": 0,
+    "react/no-children-prop": 0,
+    "space-in-parens": [
+      2,
+      "never"
+    ]
   },
   "settings": {
     "react": {
