--- a/package.json
+++ b/package.json
@@ -96,13 +96,14 @@
     "jest-transform-stub": "^2.0.0",
     "prettier": "^1.19.1",
     "react-test-render": "^1.1.2",
+    "react-test-renderer": "^16.13.1",
     "style-loader": "^1.1.3",
     "styled-components": "^5.0.1",
     "styled-normalize": "^8.0.7",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
+    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.3",
